# email-verifier

./: .env.sample  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  docker-compose.yml
.sqlx/: query-06940bcdb54fca669c79cf77a77685601758904e3b178fb2cc4654a3b558d209.json  query-080bea6c300226e14db58ea650d1acd30545f59cecd4015f7e0d8edb5b15927c.json  query-0c8b763abd7991627c107a6f510eb85e5978d329ba285064ed56cfbe3530f1ec.json  query-0ec25d310c7e28d30fc1e36994603b08b068e3ef862d62e627b55c14a93c1d4c.json  query-46d513641323b451c8b85768265d3d92e78bb1f9eb4c6e65b39fa09468fb6ff4.json  query-5407107d546778aa9e5947c1838783b1287018a15b4dda0134b8c069b8848f7b.json  query-61f005a20297da21173b3d2ac1ea6a0a0078aba93267946acffe55f9073f2425.json  query-694f42dfd9435ef1593a88eef4db230f3906f230c8b35439b2b9bfe0058e49f9.json  query-71d93507f45655a119b18165c496c047fbd10e56973cb79e64764d3baa7d5d35.json  query-7b0df57f7d9a8153d1dde2e05f279319bf83f6bcebfc550eca9f69ed23f5d8a2.json  query-a5e3c893d053e152cf685322c3a3249a61ffc2a27bb414d2318239f76099184a.json  query-acb24ca3600093a66c44d283a4534fdc47439963e11aceb9b54789c1e23b4c02.json  query-af010ef81b7a797545099fb7e5d0a7fafce25b7c6dc1fcd5c607be017c030536.json  query-be3bfe3f083904dafb45c69b3f7e1bb82283fb64fc04978d1c99054ab1d07a50.json  query-c38e44babc73e15e964da895f4b16319de946f254a24af30fac4026383945873.json  query-d7c19fb67f257e606f5676c54280a1cdedd84fe6b4637eb9270c187fa0cf6732.json  query-ee6e2b7eea72041eba0e463f05939c315a8c085e6caef83fa3299f6613887a06.json  query-ef2fbf248929dcb1d2ae17a0073a605f7ef6ad23393155004fe1c4939e147a28.json  query-fe8fb65d6cea83dd704568642436afde41c3b5f1b5b16c632cc89770f79311ab.json
migrations/: 20240730044511_verify.sql  20240825063437_token.sql  20240825075407_access_token.sql  20240827090805_channel.sql  20240829084547_mail_address.sql  (+1 more)
src/: main.rs
(+14 files in other folders)
