[package]
name = "email-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenvy = "0.15.7"
once_cell = "1.19.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
vesper = "0.13.0"
